spelling mistake edit

--- a/CV_problem/CVProblem.ipynb
+++ b/CV_problem/CVProblem.ipynb
@@ -800,7 +800,7 @@
    },
    "source": [
     "This model performs much better than our previous model. Also the gap between training accuracy and validation accuracy is reduced a lot.\n",
-    "# Furthur improving our CNN model  - Model3\n",
+    "# Further improving our CNN model  - Model3\n",
     "I have used CNN in many other datasets like FlowerRecognition, DogsVsCats and from my experience I've found that using Batch Normalisation layer helps a lot in reducing overfitting.\n",
     "The model defined below is mixed result of some trial and error and internet references and works much better than above two models. "
    ]
