--- a/Python_problem/PythonProblem.ipynb
+++ b/Python_problem/PythonProblem.ipynb
@@ -43,10 +43,10 @@
    "source": [
     "# obtained from twitter developers page.\n",
     "api_creds = {\n",
-    "    'consumer_key':'pDzrvkuuvdY4VbiY0Ki5ZKc2R',\n",
-    "    'consumer_secret':'KfNabg5jaISzZbkjZ1aYgFw7LFE8Js1wsLAa9hVH8Uund11uIH',\n",
-    "    'access_token':'144574952-sbza1XsfCjEFKmyQNLTgvm7tNNcB80drgM3dalGP',\n",
-    "    'access_token_secret':'OJXMcdHoBjvIypTukF0E86n2EHvoPJhc7sX6Pc8nd0ExM'\n",
+    "    'consumer_key':'',\n",
+    "    'consumer_secret':'',\n",
+    "    'access_token':'',\n",
+    "    'access_token_secret':''\n",
     "}\n",
     "\n",
     "# creating authentication session to use twitter api\n",
